--- a/backend/service.yaml
+++ b/backend/service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend
   namespace: test
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: backend
   ports:
